--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@ button {
 }
 
 /* Table */
+.table-container {
+  width: 100%;
+  overflow-x: auto; /* Enables horizontal swipe on mobile */
+  -webkit-overflow-scrolling: touch;
+  margin-top: 25px;
+  border-radius: 8px;
+  border: 1px solid var(--border);
+}
 table {
   width: 100%;
   border-collapse: collapse;
@@ -269,6 +277,7 @@ td {
 </div>
 
 <!-- Table -->
+<div class="table-container">
 <table id="entryTable">
 <thead>
 <tr>
@@ -282,6 +291,7 @@ td {
 </thead>
 <tbody></tbody>
 </table>
+</div>
 
 <!-- Heatmap -->
 <h2 style="text-align:center; color:var(--text); margin-top:30px;">Progress Heatmap</h2>
@@ -528,3 +538,4 @@ renderHeatmap();
 
 </body>
 </html>
+
