--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@ td {
 </div>
 
 <!-- Table -->
+<div class="table-container">
 <table id="entryTable">
 <thead>
 <tr>
@@ -290,6 +291,7 @@ td {
 </thead>
 <tbody></tbody>
 </table>
+</div>
 
 <!-- Heatmap -->
 <h2 style="text-align:center; color:var(--text); margin-top:30px;">Progress Heatmap</h2>
@@ -536,5 +538,6 @@ renderHeatmap();
 
 </body>
 </html>
+
 
 
